[package]
name = "awaitgroup"
description = "Wait for a collection of async tasks to finish."
license = "MIT"
version = "0.6.0"
repository = "https://github.com/ibraheemdev/awaitgroup"
authors = ["ibraheemdev <ibrah1440@gmail.com>"]
edition = "2018"
keywords = ["waitgroup", "notify", "wake", "futures", "async"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time"] }
