[package]
name = "awaitgroup"
description = "Wait for a collection of async tasks to finish."
license = "MIT"
version = "0.7.0"
repository = "https://github.com/ibraheemdev/awaitgroup"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
edition = "2021"
keywords = ["waitgroup", "notify", "wake", "futures", "async"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time"] }
